# locket

./: README.md  pubspec.yaml
android/app/: build.gradle
assets/images/: bunny_login.riv
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  splash_screen.dart
lib/pages/: home_page.dart  login.dart  navigation_page.dart  rive_login_screen.dart  test  test2
lib/src/rust/: frb_generated.dart
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/api/: mod.rs  service.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_locket.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_locket.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
