[package]
name = "rust_lib_locket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
flutter_rust_bridge = "=2.1.0"
serde_json = "1.0.122"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
tokio = { version = "*", features = ["full"] }